<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fragment_background">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fragment_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:backgroundTint="@android:color/transparent"/>
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tv_signUp_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="55dp"
            android:text="@string/tv_signUp_title"
            android:textAppearance="@style/TextAppearance.Vishing.Title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

        <TextView
            android:id="@+id/tv_signUp_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/tv_signUp_sub"
            android:textAppearance="@style/TextAppearance.Vishing.Content2"
            app:layout_constraintStart_toStartOf="@+id/tv_signUp_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_signUp_title"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="30dp"
            android:text="@string/tv_name"
            android:textAppearance="@style/TextAppearance.Vishing.Content.Bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_signUp_sub"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:errorTextColor="@color/red"
            app:errorIconTint="@color/red"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_name">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_new_name"
                android:textColorHint="@color/gray"
                android:textColor="@color/basic_text"
                android:background="@drawable/ic_rectangle_white"
                android:textAppearance="@style/TextAppearance.Vishing.Content2"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="18dp"
            android:text="@string/tv_email"
            android:textAppearance="@style/TextAppearance.Vishing.Content.Bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_name"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:errorTextColor="@color/red"
            app:errorIconTint="@color/red"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_email">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_email"
                android:textColor="@color/basic_text"
                android:textColorHint="@color/gray"
                android:background="@drawable/ic_rectangle_white"
                android:textAppearance="@style/TextAppearance.Vishing.Content2"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/tv_pw"
            android:textAppearance="@style/TextAppearance.Vishing.Content.Bold"
            app:layout_constraintStart_toStartOf="@+id/tv_email"
            app:layout_constraintTop_toBottomOf="@+id/input_email"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@+id/input_email"
            app:layout_constraintStart_toStartOf="@+id/tv_pw"
            app:layout_constraintTop_toBottomOf="@+id/tv_pw">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/ic_rectangle_white"
                android:hint="@string/hint_pw"
                android:textAppearance="@style/TextAppearance.Vishing.Content2"
                android:textColor="@color/basic_text"
                android:textColorHint="@color/gray"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_check_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            app:errorTextColor="@color/red"
            app:errorIconTint="@color/red"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="@+id/input_email"
            app:layout_constraintStart_toStartOf="@+id/tv_pw"
            app:layout_constraintTop_toBottomOf="@+id/input_pw">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_check_pw"
                android:textColor="@color/basic_text"
                android:textColorHint="@color/gray"
                android:background="@drawable/ic_rectangle_white"
                android:textAppearance="@style/TextAppearance.Vishing.Content2"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:background="@drawable/ic_rectangle_blue"
            android:text="@string/tv_continue"
            android:textAppearance="@style/TextAppearance.Vishing.Content.Bold"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="@+id/input_check_pw"
            app:layout_constraintStart_toStartOf="@+id/input_check_pw"
            app:layout_constraintTop_toBottomOf="@+id/input_check_pw"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>