<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fragment_background">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/title_mypage"
                android:textAppearance="@style/TextAppearance.Vishing.Title"/>
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="62dp"
            android:src="@drawable/ic_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="UserName"
            android:textAppearance="@style/TextAppearance.Vishing.Content.Bold"
            app:layout_constraintEnd_toEndOf="@+id/img_profile"
            app:layout_constraintStart_toStartOf="@+id/img_profile"
            app:layout_constraintTop_toBottomOf="@+id/img_profile" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="yurim2032@gmail.com"
            android:textAppearance="@style/TextAppearance.Vishing.Content2"
            app:layout_constraintEnd_toEndOf="@+id/img_profile"
            app:layout_constraintStart_toStartOf="@+id/img_profile"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name"/>

        <TextView
            android:id="@+id/tv_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="16dp"
            android:text="@string/tv_pw"
            android:textAppearance="@style/TextAppearance.Vishing.Content.Bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="22dp"
            app:errorIconTint="@color/red"
            app:errorTextColor="@color/red"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_pw"
            app:layout_constraintTop_toBottomOf="@+id/tv_pw">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/ic_rectangle_white"
                android:hint="@string/hint_pw"
                android:inputType="textPassword"
                android:textAppearance="@style/TextAppearance.Vishing.Content2"
                android:textColor="@color/basic_text"
                android:textColorHint="@color/gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="11dp"
            android:background="@drawable/ic_rectangle_blue"
            android:backgroundTint="@color/light_gray"
            android:text="@string/btn_cancel"
            android:textAppearance="@style/TextAppearance.Vishing.Content.Bold"
            android:textColor="@color/gray"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:layout_constraintEnd_toStartOf="@+id/btn_done"
            app:layout_constraintStart_toStartOf="@+id/input_pw"
            app:layout_constraintTop_toBottomOf="@+id/input_pw"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_rectangle_blue"
            android:text="@string/btn_done"
            android:textColor="@color/blue"
            android:textAppearance="@style/TextAppearance.Vishing.Content.Bold"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:layout_constraintEnd_toEndOf="@+id/input_pw"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@+id/input_pw"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>